<?xml version="1.0"?>
<package format="2">
  <name>gps_plotter</name>
  <version>0.0.0</version>
  <description>The gps_plotter package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
